querying postcodes from local instead of mongodb